--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
+    "jsonp": "^0.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
